pstream => pstream.js

--- a/demos/repair/package.json
+++ b/demos/repair/package.json
@@ -8,6 +8,6 @@
     "@babel/plugin-transform-arrow-functions": "7.2.0",
     "@babel/plugin-transform-destructuring": "7.5.0",
     "@babel/plugin-transform-parameters": "7.4.4",
-    "pstream": "file:../../"
+    "pstreamjs": "file:../../"
   }
 }
