--- a/demos/verification/package.json
+++ b/demos/verification/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@cycle-robot-drivers/run": "1.0.22",
     "@cycle/time": "^0.19.0",
-    "pfrp": "file:../../",
+    "pstreamjs": "file:../../",
     "ltljs": "0.0.1",
     "xstream": "11.11.0"
   },
