--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.8",
   "main": "index.js",
   "scripts": {
-    "postinstall": "cd ./demos/repair/ && npm install & cd ./demos/simulation/ && npm install & cd ./demos/verification/ && npm install",
-    "test": "jest --testPathIgnorePatterns /./demos/ /node_modules/",
+    "postinstall": "if [ -n \"$DEMO\" ]; then cd ./demos/repair/ && npm install & cd ./demos/simulation/ && npm install & cd ./demos/verification/ && npm install; fi",
+    "test": "npx jest --testPathIgnorePatterns ./demos/ /node_modules/",
     "clean": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +"
   },
   "dependencies": {
@@ -13,7 +13,5 @@
     "webppl": "0.9.15",
     "xstream": "11.11.0"
   },
-  "devDependencies": {
-    "jest": "^24.8.0"
-  }
+  "devDependencies": {}
 }
