--- a/demos/repair/package.json
+++ b/demos/repair/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "7.12.10",
     "@babel/plugin-transform-arrow-functions": "7.2.0",
     "@babel/plugin-transform-destructuring": "7.5.0",
     "@babel/plugin-transform-parameters": "7.4.4",
